@@ -3,6 +3,7 @@ Devel::Cover history
 {{$NEXT}}
  - Remove dependency on CGI (use HTML::Entities instead) (Lee Johnson).
  - Fix a use of the wrong type of null constant (Zefram) (RT #103102).
+ - Link to next uncovered statement in html_basic (H.Merijn Brand).
 
 Release 1.17 - 20 September 2014
  - Get cpancover to release quality.
